--- a/full/demo/rwb/.htaccess
+++ b/full/demo/rwb/.htaccess
@@ -5,6 +5,6 @@ AddHandler application/x-httpd-php .appcache
 
 # Deny access to everything except jquery and the appcache file
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !^jquery.*\.js$
-RewriteCond %{REQUEST_FILENAME} !^rwb.appcache$
+RewriteCond %{REQUEST_FILENAME} !jquery.*\.js$
+RewriteCond %{REQUEST_FILENAME} !rwb\.appcache$
 RewriteRule . - [F]
